--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,14 @@
 /*esto es para EL EPIGRAFE DE IMG GALERIA antes figcaption*/
 @import url("https://fonts.googleapis.com/css2?family=Elsie:wght@900&family=Yeseva+One&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+
+html{
+  scroll-behavior:smooth;
+}
+section [id]{
+  scroll-margin-top: 120px;
+}
+
 li{
   list-style:none;
   color:rgba(2, 1, 1, 0.692);
@@ -9,7 +17,29 @@ li{
   font-weight: bold;
   font-size: 16px;
 }
-
+.btnCentrar{
+  display: flex;
+  height: 40px;
+  flex-direction: row;
+  align-items: center;
+  margin: 10px 20px;
+}
+.btnContratar{
+  width: 110px;height: 40px;
+  background-color: #FEDBD0;
+  color: #442C2E;
+  border-radius: 12px;
+  border:thin;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+}
+.btnContratar:hover{
+  background-color: #442C2E;
+  color: #FEDBD0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
 /*iconos del footer*/
 .icono--instagram {
   color: #858383c4;
@@ -219,6 +249,7 @@ li{
   }
 }
 
+/*TABLET*/
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .inicio .inicio__titulo h1 {
     text-align: left;
@@ -228,17 +259,18 @@ li{
     font-size: 18px !important;
   }
   .inicio .inicio__container {
-    width: 90vw;
-    height: 30vh;
+    width: 75vw;
+    height: 25vh;
         grid-template-columns: repeat(4, 1fr);
     -ms-grid-rows: 2fr;
         grid-template-rows: 2fr;
+        grid-gap: 20px;
     -webkit-box-align: left;
         -ms-flex-align: left;
             align-items: left;
   }
   .inicio .inicio__container img {
-    width: 90%;
+    width: 100%;
     border-radius: 17%;
   }
   .grilla-perfil {
@@ -280,7 +312,7 @@ li{
     width: 40%;
   }
 }
-
+/*DESKTOP*/
 @media screen and (min-width: 1024px) and (max-width: 2560px) {
   .menu__divisor {
     height: 5px;
@@ -291,7 +323,7 @@ li{
   }
   .inicio {
     height: 100vh;
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: 1fr 0.5fr 60px 1fr;
   }
   .inicio .inicio__titulo h1 {
     font-size: 9rem !important;
@@ -303,17 +335,18 @@ li{
   }
   .inicio .inicio__container {
     margin: 0px;
-    width: 90vw;
-    height: 40vh;
+    width: 88vw;
+    height: 30vh;
         grid-template-columns: repeat(4, 1fr);
     -ms-grid-rows: 1fr;
         grid-template-rows: 1fr;
+    grid-gap: 30px;
     -webkit-box-align: left;
         -ms-flex-align: left;
             align-items: left;
   }
   .inicio .inicio__container img {
-    width: 75%;
+    width: 100%;
     border-radius: 10%;
   }
   .grilla-perfil {
@@ -381,10 +414,10 @@ body::-webkit-scrollbar {
   margin-bottom:60px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 1fr 0.5fr 2fr;
-      grid-template-rows: 1fr 0.5fr 2fr;
+  -ms-grid-rows: 1fr 0.5fr 60px 2fr;
+      grid-template-rows: 1fr 0.5fr 60px 2fr;
   width: 99vw;
-  grid-row-gap: 20px;
+  grid-row-gap: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -393,7 +426,7 @@ body::-webkit-scrollbar {
 .inicio__titulo h1 {
   font-family: "Yeseva One", cursive, "Elsie", cursive;
   color: #50361f;
-  font-size: 3rem !important;
+  font-size: 3.5rem !important;
   font-weight: bold !important;
   text-align: center;
 }
@@ -401,20 +434,20 @@ body::-webkit-scrollbar {
 .inicio__container {
   display: -ms-grid;
   display: grid;
-  margin: 10px;
-  width: 80vw;
+  margin: 0px 10px 50px;
+  justify-content: center;
+  align-items: center;
+  width: 80vw; height: 30vh; 
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
-  grid-gap: 20px;
+  grid-gap: 10px;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
-  justify-items: center;
 }
 
 .inicio__container img {
   width: 80%;
-  border-radius: 50%;
+  border-radius: 70%;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
   -webkit-transition: -webkit-transform 1.2s;
@@ -432,9 +465,26 @@ body::-webkit-scrollbar {
    width: 60vw;
  }
 .inicio__figcap figcaption {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-size: 12px;
   text-align: center;
+}
+
+#vacio{
+  height: 100px;
+}
+#gridServicios{
+  display: grid;
+  grid-template-columns: repeat(2,2fr);
+  grid-gap: 2rem;
+  margin: 80px 20px 10px;
+}
+.tituloServ{
+  font-family: 'Rubik', sans-serif;
+  font-size: 24px;
+  background-color: #fedbd0ce;
+color: #442c2eda;
+font-weight: bold;
 }
 
 .contact-form {
