--- a/css/partials/_fuentes.scss
+++ b/css/partials/_fuentes.scss
@@ -1,15 +1,13 @@
 /*esto es para EL TITULO DEL INDEX*/
-$font-Casual:'Casual';
-$size-titulo:3.5rem;
-$font-Elsie:'Elsie', cursive;
-$font-Yeseva:'Yeseva One', cursive;
-$font-Raleway: 'Raleway', sans-serif;
+$font-Casual: "Casual";
+$size-titulo: 3.5rem;
+$font-Elsie: "Elsie", cursive;
+$font-Yeseva: "Yeseva One", cursive;
+$font-Raleway: "Raleway", sans-serif;
 /*esto es para EL EPIGRAFE DE IMG GALERIA antes figcaption*/
-$font-epigraf: 'Quicksand', sans-serif;
+$font-epigraf: "Quicksand", sans-serif;
 $sz-figcap: 1rem;
-$font-bold-ep:'PT Serif', serif;
+$font-bold-ep: "PT Serif", serif;
 
-
-@import url('https://fonts.googleapis.com/css2?family=Elsie:wght@900&family=Yeseva+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Elsie:wght@900&family=Yeseva+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
