--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/*esto es para EL TITULO DEL INDEX*/
-/*esto es para EL EPIGRAFE DE IMG GALERIA antes figcaption*/
 @font-face {
     font-family: "Futura Bold";
     src: url(file:/C:/PortfolioJS_Esersky/css/fonts/Futura-Bold.otf)
@@ -101,9 +99,7 @@ li {
 .green-bgr {
     background-color: #069754;
 }
-.red-bgr {
-    background-color: #db332d;
-}
+
 .red-bgr2 {
     background-color: #ff914d;
 }
@@ -124,18 +120,16 @@ li {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
+    -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
+    -ms-flex-flow: column wrap;
+    flex-flow: column wrap;
     -webkit-box-pack: space-evenly;
     -ms-flex-pack: space-evenly;
     justify-content: space-evenly;
 }
-
-.card-columns .card img {
+.card img {
     background-color: transparent;
-
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -146,20 +140,17 @@ li {
     width: 80vw;
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15);
-    -webkit-transition: -webkit-transform 1.5s;
-    transition: -webkit-transform 1.5s;
-    transition: transform 1.5s;
-    transition: transform 1.5s, -webkit-transform 1.5s;
 }
-
-.card-columns .card:hover {
+.card img:hover {
     -webkit-transform: scale(1.05);
     transform: scale(1.05);
+    transition: 1.2s;
 }
 
 .round-borders {
     border-radius: 6px;
     background-color: transparent;
+    border-color: transparent;
 }
 
 /*_________PROYECTOS.HTML_________*/
@@ -170,23 +161,22 @@ li {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-flow: column wrap;
-    flex-flow: column wrap;
-    -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
     margin: 10px;
     -ms-flex-preferred-size: 390px;
     flex-basis: 390px;
+    width: 90vw;
 }
 
 .flexVideos iframe {
     margin: 10px;
     width: 90%;
-    border-radius: 5%;
+    border-radius: 6px;
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.308);
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.308);
 }
@@ -197,7 +187,6 @@ li {
     display: grid;
     -ms-grid-rows: 1fr 4fr;
     grid-template-rows: 1fr 4fr;
-    height: 100vh;
     width: 94vw;
     grid-row-gap: 20px;
     -ms-flex-line-pack: center;
@@ -267,12 +256,38 @@ li {
 
 /*TABLET*/
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .inicio {
+        -ms-grid-rows: 0.5fr 1fr 3fr;
+        grid-template-rows: 0.5fr 1fr 3fr;
+        width: 80vw;
+        height: 100vh !important;
+    }
+    .container-gifs img {
+        width: 50% !important;
+    }
+    section {
+        flex: 0 0 48%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    section > .items {
+        flex: 0 0 40%;
+        height: 50px;
+    }
+    .items {
+        padding: 5px;
+        margin: 5px;
+    }
     .inicio .inicio__titulo h1 {
+        flex-flow: column wrap;
         text-align: left;
-        font-size: 7rem !important;
+        font-size: 6rem !important;
+        margin-left: 8px;
+        margin-top: 20px;
     }
     .inicio__figcap figcaption {
         font-size: 18px !important;
+        margin-left: 10px;
     }
 
     .grilla-perfil {
@@ -283,8 +298,9 @@ li {
         margin: 20px;
     }
     .grilla-perfil .fotoPerfil img {
-        height: 315px;
         margin: 30px 40px;
+        width: 80%;
+
         border-radius: 10%;
     }
     .grilla-perfil .cajaPerfil {
@@ -302,20 +318,49 @@ li {
     .grilla-perfil .cajaPerfil p {
         text-align: right;
     }
-    #listadoContainer {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 1rem;
+    .card-columns {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+        justify-content: space-evenly;
     }
+    .card-columns .card {
+        width: 80%;
+        border: transparent;
+        justify-content: center;
+        align-items: center;
+    }
+    .card-columns .card img {
+        width: 90%;
+    }
+
     .flexVideos {
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
         -ms-flex-flow: row wrap;
         flex-flow: row wrap;
-        width: 100vw;
+        width: 95vw;
+        row-gap: 20px;
+        column-gap: 20px;
+        margin: 20px;
+        justify-content: center;
     }
     .flexVideos iframe {
         width: 40%;
+    }
+    #gridServicios {
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        grid-gap: 2rem;
+        margin: 20px 20px 10px;
+    }
+    #listadoContainer {
+        display: grid;
+        grid-template-columns: repeat(2, 2fr);
+        grid-gap: 1rem;
     }
 }
 /*DESKTOP*/
@@ -323,26 +368,37 @@ li {
     .menu__divisor {
         height: 5px;
         width: 100vw;
-        background: #ffffff;
+        background: #050505;
         background: radial-gradient(
             circle,
-            #fffefc 0%,
+            #000000 0%,
             #646464 0%,
-            #fffefc 100%
+            #000000 100%
         );
         filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff",endColorstr="#ffffff",GradientType=1);
     }
     .inicio {
-        height: 100vh;
-        grid-template-rows: 1fr 0.5fr 60px 1fr;
+        -ms-grid-rows: 0.5fr 1fr 3fr;
+        grid-template-rows: 0.5fr 1fr 3fr;
+        height: 90vh !important;
+    }
+    .container-gifs {
+        width: 50vw;
+        justify-content: center;
+    }
+    .container-gifs img {
+        width: 20% !important;
     }
     .inicio .inicio__titulo h1 {
-        font-size: 9rem !important;
+        font-size: 8rem !important;
         text-align: left;
+        margin-left: 8px;
+        margin-top: 20px;
     }
 
     .inicio__figcap figcaption {
         font-size: 20px !important;
+        margin-left: 10px;
     }
 
     .grilla-perfil {
@@ -358,42 +414,65 @@ li {
         height: auto;
     }
     .grilla-perfil .fotoPerfil img {
-        height: 500px;
         border-radius: 3%;
+        width: 50%;
     }
     .grilla-perfil .cajaPerfil {
         text-align: right;
         margin: 10px 4rem 20px;
+        padding: 20px;
     }
-    .grilla-perfil .cajaPerfil h1 {
-        font-size: 10vw;
+    .cajaPerfil h1 {
+        font-size: 10rem;
         text-align: right;
     }
-    .grilla-perfil .cajaPerfil p {
+    .cajaPerfil p {
         margin-left: 10px;
         text-align: right;
+        font-size: 48px;
+    }
+    .card-columns {
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+        row-gap: 10px;
+    }
+    .card-columns .card {
+        width: 20vw;
+        border: transparent;
+        justify-content: center;
+        align-items: center;
+    }
+    .card-columns .card img {
+        width: 70%;
     }
     #gridServicios {
         display: grid;
         grid-template-columns: repeat(2, 2fr);
         grid-gap: 2rem;
-        margin: 20px 20px 10px;
+        margin: 20px 40px 10px;
     }
     #listadoContainer {
-        display: grid;
-        grid-template-columns: repeat(2, 2fr);
-        grid-gap: 1rem;
+        margin: 20px;
+    }
+    #serviciosIndex {
+        width: 50vw;
+    }
+    #carritoIndex {
+        width: 40vw;
     }
     .flexVideos {
         -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-        flex-flow: row wrap;
-        height: 90vh;
+        -ms-flex-flow: row nowrap;
+        flex-flow: row nowrap;
+        height: 70vh;
+        width: 99vw;
+        justify-content: center;
     }
     .flexVideos iframe {
-        width: 30%;
-        border-radius: 3%;
+        width: 20%;
     }
 }
 
@@ -423,10 +502,10 @@ body::-webkit-scrollbar {
     margin: 20px;
     display: -ms-grid;
     display: grid;
-    -ms-grid-rows: 1fr 2fr;
-    grid-template-rows: 1fr 2fr;
+    -ms-grid-rows: 0.5fr 1fr 2fr;
+    grid-template-rows: 0.5fr 1fr 2fr;
     width: 88vw;
-    height: 70vh;
+    height: 60vh;
     grid-row-gap: 10px;
     -webkit-box-align: left;
     -ms-flex-align: left;
@@ -442,7 +521,7 @@ body::-webkit-scrollbar {
 .inicio__titulo h1 {
     font-family: "Futura Bold", sans-serif;
     color: #160101;
-    font-size: 6rem !important;
+    font-size: 2rem !important;
     font-weight: 800 !important;
     text-align: left;
     word-break: break-all;
@@ -459,11 +538,23 @@ body::-webkit-scrollbar {
     margin-bottom: 20px;
     font-family: "Futura T Bold", sans-serif;
     color: #341a18;
-    font-size: 1.5rem;
+    font-size: 0.8rem;
     font-weight: 600;
     text-align: left;
     word-break: keep-all;
 }
+.container-gifs {
+    display: flex;
+    flex-flow: row wrap;
+    width: 80vw;
+    justify-content: space-around;
+    align-items: center;
+}
+.container-gifs img {
+    margin: 0px;
+    width: 50%;
+}
+
 /******* SERVICIOS SHOP.HTML******/
 
 #gridServicios {
@@ -474,7 +565,7 @@ body::-webkit-scrollbar {
 }
 #listadoContainer {
     display: grid;
-    grid-template-rows: 2fr;
+    grid-template-columns: 2fr;
     grid-gap: 1rem;
 }
 .tituloServ {
@@ -495,14 +586,14 @@ body::-webkit-scrollbar {
     flex-direction: column;
     overflow: hidden;
     margin: 10px;
-    border: 2px solid #332727;
+    border: 2px solid #33272760;
     background: none;
     border-radius: 25px;
     padding: 0.6rem 1.2rem;
     color: #fff;
     letter-spacing: 0.5px;
 }
-.carritoCard.card-body {
+.carritoCard.imgProd {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -550,7 +641,17 @@ img {
     -webkit-transition: 0.3s;
     transition: 0.3s;
 }
+
 /*********CONTACTO********/
+.form-error {
+    color: rgb(226, 4, 4);
+}
+.form-success {
+    color: green;
+}
+.input-error {
+    box-shadow: 0 0 5px rgb(214, 6, 6);
+}
 .container {
     font-family: "Quicksand", sans-serif;
     color: rgb(254, 254, 255);
@@ -564,21 +665,19 @@ img {
     justify-content: center;
 }
 .form {
-    width: 100%;
-    max-width: 820px;
-    background-color: #dfcccc71;
+    width: 50%;
+    max-width: 410px;
+    background-color: #dfcccc00;
     border-radius: 10px;
     box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.15);
     z-index: 1000;
     overflow: hidden;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2fr;
 }
-.contact-info {
-    background-color: rgb(0, 0, 0);
-}
+
 .contact-form {
-    background-color: #643c2d;
+    background-color: #6f9bb9;
     position: relative;
 }
 
@@ -587,7 +686,7 @@ img {
     position: absolute;
     width: 26px;
     height: 26px;
-    background-color: #643c2d;
+    background-color: #6f9bb9;
     transform: rotate(45deg);
     top: 50px;
     left: -13px;
@@ -653,7 +752,7 @@ textarea.input {
     font-family: "Courier New", Courier, monospace;
     font-size: 0.95rem;
     font-weight: 600;
-    color: #643c2d;
+    color: #1a1311;
     line-height: 25px;
     border-radius: 25px;
     outline: none;
@@ -683,7 +782,7 @@ textarea.input {
     opacity: 0;
     transition: 0.3s;
     height: 5px;
-    background-color: #643c2d;
+    background-color: #6f9bb9;
     top: 50%;
     border-radius: 10px;
     transform: translateY(-50%);
